tests/ui/feature-gates/feature-gate-macro-implicit-pub.stderr
error[E0364]: `not_pub` is only public within the crate, and cannot be re-exported outside
  --> $DIR/feature-gate-macro-implicit-pub.rs:8:9
   |
LL | pub use not_pub;
   |         ^^^^^^^
   |
help: consider adding a `#[macro_export]` to the macro in the imported module
  --> $DIR/feature-gate-macro-implicit-pub.rs:4:1
   |
LL | / macro_rules! not_pub {
LL | |     () => {}
LL | | }
   | |_^
help: in case you want to use the macro within this crate only, reduce the visibility to `pub(crate)`
   |
LL | pub(crate) use not_pub;
   |    +++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0364`.
